# ov2640_pio

./: CMakeLists.txt  capture.py  image_process.ipynb  main.c
inc/: camera_interface.pio.h  image_process.h  ov2640.h  ov2640_reg.h  sccb.h
src/: camera_interface.pio  image_process.c  ov2640.c  sccb.c
